--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -320,7 +320,7 @@ $card-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
         }
 
         .main-title {
-          font-size: 2rem;
+          font-size: 1.5rem;
           line-height: 1.3;
           text-align: left;
           margin-bottom: 1rem;
@@ -428,6 +428,7 @@ $card-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
 
           .card-img {
             width: 100%;
+            object-fit: cover;
             border-radius: 8px;
             margin-bottom: 15px;
             transition: transform 0.5s ease;
